# cmake-cookbook

chapter-07/recipe-01/cxx-example/tests/: CMakeLists.txt
chapter-07/recipe-02/example/: CMakeLists.txt
chapter-07/recipe-03/c-cxx-example/: set_compiler_flag.cmake
chapter-07/recipe-04/cxx-example/cmake/: testing.cmake
chapter-07/recipe-04/cxx-example/tests/: CMakeLists.txt
chapter-07/recipe-05/example/cmake/: include_guard.cmake
chapter-07/recipe-06/example/: CMakeLists.txt
chapter-07/recipe-08/cxx-example/: CMakeLists.txt
chapter-07/recipe-09/fortran-example/: CMakeLists.txt
chapter-08/recipe-03/c-example/: CMakeLists.txt
